syntax = "proto3";
package ipv6;

message Address {
  double latitude = 1;
  double longitude = 2;
  int32 count = 3;
}

message Filters {
  double minLatitude = 1;
  double maxLatitude = 2;
  double minLongitude = 3;
  double maxLongitude = 4;
}

message ListResult {
  repeated Address results = 1;
  int32 maxCount = 2;
}
